on board screen is completed.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Mars App</string>
+    <string name="on_board_title">
+        <![CDATA[<p><b><font color=#FFFFFF>Let’s Explore the</font><br><font color=#F9AD1A>Solar System</font><br><font color=#FFFFFF>with </font><font color=#F9AD1A>Explorer</font></b></p>]]></string>
 </resources>
