Bug fixes & performance improvements

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,12 @@
     <string name="app_name">Mars App</string>
     <string name="on_board_title">
         <![CDATA[<p><b><font color=#FFFFFF>Let’s Explore the</font><br><font color=#F9AD1A>Solar System</font><br><font color=#FFFFFF>with </font><font color=#F9AD1A>Explorer</font></b></p>]]></string>
+    <string name="astronomer">astronomer</string>
+    <string name="let_s_go">Let\'s Go</string>
+    <string name="earth">earth</string>
+    <string name="backbutton">backButton</string>
+    <string name="distance">distance</string>
+    <string name="image">image</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
